traefik-loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
    - port: 443
      targetPort: 8443
  selector:
    app.kubernetes.io/name: traefik
