worklenz-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worklenz-backend-deployment
  labels:
    app: worklenz-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worklenz-backend
  template:
    metadata:
      labels:
        app: worklenz-backend
    spec:
      containers:
      - name: worklenz-backend
        image: docker.io/kithceydigital/worklenz_backend:latest
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: worklenz-backend-service
spec:
  selector:
    app: worklenz-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
