worklenz-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worklenz-frontend-deployment
  labels:
    app: worklenz-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worklenz-frontend
  template:
    metadata:
      labels:
        app: worklenz-frontend
    spec:
      containers:
      - name: worklenz-frontend
        image: docker.io/kithceydigital/worklenz_frontend:latest
        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: worklenz-frontend-service
spec:
  selector:
    app: worklenz-frontend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30000
  type: NodePort
